--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ deno_error = "0.5.6"
 env = "1.0.1"
 reqwest = "0.12.15"
 tokio = { version = "1.44.1", features = ["full"] }
+serde = { version = "1.0", features = ["derive"] }
